# Hex

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .env.example  .gitignore  .ralph-last-branch  .subtask-6-3-summary.md  CHANGELOG.md  EPICS.md  HOW_TO_RUN.md  Localizable.xcstrings  PHASE_7_COMPLETE.md  PRD.md  RALPH_GUIDE.md  README.md  SUBTASK-11-3-COMPLETION.md  SUBTASK-11-4-COMPLETION.md  SUBTASK-11-6-COMPLETION.md  SUBTASK-14-1-COMPLETION.md  package-lock.json  package.json  prd.json  progress.txt  pyproject.toml  setup.py  syntax_test.swift  test_gui_import.py  test_transcription_result.py
.changeset/: b0951986.md
.claude/agents/: project-planner.md
.github/: copilot-instructions.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md
Hex/: Hex.entitlements  Info.plist
Hex.xcodeproj/: project.pbxproj
Hex/App/: HexAppDelegate.swift
Hex/Clients/: AIClient.swift  HuggingFaceClient.swift  KeyEventMonitorClient.swift  PasteboardClient.swift  SecurityHardeningProvider.swift  SharedAPIAuth.swift
Hex/Models/: AIModel.swift  HotkeyPermissionState.swift  Note.swift  Reminder.swift  SearchSettings.swift  TodoItem.swift
Hex/Views/: AIAssistantIndicatorView.swift  AIAssistantSettingsView.swift  CalculatorResultView.swift  ModelDownloadProgressView.swift  ModelDownloadView.swift  NoteEditorView.swift  SearchResultsView.swift  TimerNotificationView.swift  TodoListView.swift
HexCore/: Package.resolved  Package.swift
HexTests/: IntegrationTests.swift  ModelManagementTests.swift  SystemControlTests.swift
docs/: Universal-Text-Enhancement.md  add-ons-development-plans.md  ai-assistant-usage.md  feature-plan.md  feature-proposal-universal-text-enhancement.md  local-ai-transcription-flow.md  voice-commands-reference.md
scripts/ralph/: CLAUDE.md  ralph.sh  watch.sh
specs/001-local-ai-assistant/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src/hex/: app.py  (+2 more)
tests/: CLIPBOARD_VERIFICATION.md  __init__.py  conftest.py  debug_double_tap.py  test_clipboard.py  test_clipboard_manual.py  test_e2e.py  test_e2e.py.bak2  test_hotkey_processor.py  test_transcription.py  verification_summary.md  verification_summary_double_tap.md  verification_summary_esc_cancellation.md  verification_summary_history_management.md  verification_summary_ollama_error_handling.md  verification_summary_settings_persistence.md  verification_summary_short_recording_discard.md  verification_summary_word_removal_processing.md  verify_double_tap_mode.py  verify_esc_cancellation.py  verify_history_management.py  verify_ollama_error_handling.py  verify_persistence_simple.py  verify_settings_persistence.py  verify_short_recording_discard.py  verify_transcript_persistence.py  verify_transcription.py  verify_word_removal_processing.py
(+156 files in other folders)
